Getting BCM2708 PCM/I2S driver in to source tree

--- a/arch/arm/mach-bcm2708/Kconfig
+++ b/arch/arm/mach-bcm2708/Kconfig
@@ -29,4 +29,10 @@ config BCM2708_NOL2CACHE
         help
           Do not allow ARM to use GPU's L2 cache. Requires disable_l2cache in config.txt.
 
+config BCM2708_PCM
+	tristate "BCM2708 PCM/I2S audio support"
+	depends on MACH_BCM2708
+	help
+	  Include support for the Broadcom(R) BCM2708 PCM/I2S HW
 endmenu
+
