--- a/arch/arm/configs/bcmrpi_emergency_defconfig
+++ b/arch/arm/configs/bcmrpi_emergency_defconfig
@@ -389,6 +389,7 @@ CONFIG_MMC_SDHCI=y
 CONFIG_MMC_SDHCI_PLTFM=y
 CONFIG_MMC_SDHCI_BCM2708=y
 CONFIG_MMC_SDHCI_BCM2708_DMA=y
+CONFIG_BCM2708_PCM=n
 CONFIG_LEDS_GPIO=y
 CONFIG_LEDS_TRIGGER_TIMER=m
 CONFIG_LEDS_TRIGGER_HEARTBEAT=m
